--- a/Labsheet3/MainWindow.xaml
+++ b/Labsheet3/MainWindow.xaml
@@ -5,8 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Labsheet3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Loaded="Window_Loaded">
+
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="1*"/>            
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+
+
+        <ListBox x:Name="lbxExpenses" Grid.Row="0" Grid.Column="0" Margin="10" Grid.ColumnSpan="1" Grid.RowSpan="5"/>
+        <TextBlock x:Name="txbResult"  Margin="10"  Text="0" Grid.Row="3" Grid.Column="2" Height="25"/>
+        <Label Content="Total Expenses:" Margin="10" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Right"/>
+        <TextBlock x:Name="txbNumber"  Margin="10"  Text="0" Grid.Row="4" Grid.Column="2" Height="25"/>
+        <Label Content="Number Of Expenses:" Margin="10" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Right"/>
+        <Button x:Name="btnAddExpenses" Content="Add Expenses"   Click="btnAddExpenses_Click" Margin="10" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="1"/>
+        <Button x:Name="btnRemove" Content="Remove"   Click="BtnRemove_Click" Margin="10" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1"/>
+
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="10">
+            <Label Content="Category" Margin="10" HorizontalAlignment="Right"/>
+            <Label Content="Date" Margin="10" HorizontalAlignment="Right"/>
+            <Label Content="Cost" Margin="10" HorizontalAlignment="Right"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="0" Grid.Column="2" Margin="10">
+            <TextBox Name="tbxCategory" Margin="10" Height="25"/>
+            <DatePicker Name="dpExpenseDate" Margin="10" Height="25"/>
+            <TextBox Name="tbxCost" Margin="10" Height="25"/>
+        </StackPanel>
     </Grid>
 </Window>
