--- a/Labsheet3/MainWindow.xaml
+++ b/Labsheet3/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Labsheet3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        Loaded="Window_Loaded">
+        Title="Expense App" Height="450" Width="800"
+        Loaded="Window_Loaded"
+        WindowStartupLocation="CenterScreen">
 
 
     <Grid>
@@ -17,31 +18,42 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="5*"/>
-            <RowDefinition Height="1*"/>            
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
 
-        <ListBox x:Name="lbxExpenses" Grid.Row="0" Grid.Column="0" Margin="10" Grid.ColumnSpan="1" Grid.RowSpan="5"/>
+        <ListBox x:Name="lbxExpenses" Grid.Row="0" Grid.Column="0" Margin="10,10,10,0" Grid.ColumnSpan="1"/>
         <TextBlock x:Name="txbResult"  Margin="10"  Text="0" Grid.Row="3" Grid.Column="2" Height="25"/>
         <Label Content="Total Expenses:" Margin="10" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Right"/>
         <TextBlock x:Name="txbNumber"  Margin="10"  Text="0" Grid.Row="4" Grid.Column="2" Height="25"/>
         <Label Content="Number Of Expenses:" Margin="10" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Right"/>
         <Button x:Name="btnAddExpenses" Content="Add Expenses"   Click="btnAddExpenses_Click" Margin="10" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="1"/>
-        <Button x:Name="btnRemove" Content="Remove"   Click="BtnRemove_Click" Margin="10" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1"/>
+        <Button x:Name="btnRemove" Content="Remove"   Click="btnRemove_Click" Margin="10" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1"/>
 
         <StackPanel Grid.Row="0" Grid.Column="1" Margin="10">
-            <Label Content="Category" Margin="10" HorizontalAlignment="Right"/>
+            <Label Content="Custom category" Margin="0,10,10,10" HorizontalAlignment="Right" Width="102"/>
             <Label Content="Date" Margin="10" HorizontalAlignment="Right"/>
             <Label Content="Cost" Margin="10" HorizontalAlignment="Right"/>
+            <Label Content="Category" Margin="0,10,10,10" HorizontalAlignment="Right"/>
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="2" Margin="10">
             <TextBox Name="tbxCategory" Margin="10" Height="25"/>
             <DatePicker Name="dpExpenseDate" Margin="10" Height="25"/>
             <TextBox Name="tbxCost" Margin="10" Height="25"/>
+            <ComboBox x:Name="cbxSelectCategory" Margin="10" Height="25
+                      "/>
         </StackPanel>
+        <Label Content="Search" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="76" Height="27"/>
+        <Button x:Name="btnSearch" Content="&gt;&gt;&gt;" HorizontalAlignment="Left" Height="26" Margin="312,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="61" Click="btnSearch_Click"/>
+        <TextBox x:Name="tbxSearch" HorizontalAlignment="Left" Height="26" Margin="91,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="178"/>
+        <Button x:Name="btnShowAll" Content="Show All" Grid.Column="1" HorizontalAlignment="Left" Margin="36,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="103" Height="26" Click="BtnShowAll_Click"/>
+        <ComboBox x:Name="cbxFilter" HorizontalAlignment="Left" Margin="91,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="178" Height="27" SelectionChanged="CbxFilter_SelectionChanged"/>
+        <Label Content="Filter" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="47" Height="27"/>
+        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="91,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="100" Height="26" Click="BtnSave_Click"/>
+        <Button x:Name="btnLoad" Content="Load" HorizontalAlignment="Left" Margin="91,10,0,0" Grid.Row="4" VerticalAlignment="Top" Width="100" Height="26" Click="BtnLoad_Click"/>
     </Grid>
 </Window>
