--- a/Labsheet3/MainWindow.xaml
+++ b/Labsheet3/MainWindow.xaml
@@ -25,7 +25,7 @@
         </Grid.RowDefinitions>
 
 
-        <ListBox x:Name="lbxExpenses" Grid.Row="0" Grid.Column="0" Margin="10,10,10,0" Grid.ColumnSpan="1"/>
+        <ListBox x:Name="lbxExpenses" Grid.Row="0" Grid.Column="0" Margin="10,10,10,11" Grid.ColumnSpan="1" Grid.RowSpan="5"/>
         <TextBlock x:Name="txbResult"  Margin="10"  Text="0" Grid.Row="3" Grid.Column="2" Height="25"/>
         <Label Content="Total Expenses:" Margin="10" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" HorizontalAlignment="Right"/>
         <TextBlock x:Name="txbNumber"  Margin="10"  Text="0" Grid.Row="4" Grid.Column="2" Height="25"/>
@@ -33,27 +33,16 @@
         <Button x:Name="btnAddExpenses" Content="Add Expenses"   Click="btnAddExpenses_Click" Margin="10" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="1"/>
         <Button x:Name="btnRemove" Content="Remove"   Click="btnRemove_Click" Margin="10" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1"/>
 
-        <StackPanel Grid.Row="0" Grid.Column="1" Margin="10">
-            <Label Content="Custom category" Margin="0,10,10,10" HorizontalAlignment="Right" Width="102"/>
-            <Label Content="Date" Margin="10" HorizontalAlignment="Right"/>
-            <Label Content="Cost" Margin="10" HorizontalAlignment="Right"/>
-            <Label Content="Category" Margin="0,10,10,10" HorizontalAlignment="Right"/>
-        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="10"/>
 
-        <StackPanel Grid.Row="0" Grid.Column="2" Margin="10">
-            <TextBox Name="tbxCategory" Margin="10" Height="25"/>
-            <DatePicker Name="dpExpenseDate" Margin="10" Height="25"/>
-            <TextBox Name="tbxCost" Margin="10" Height="25"/>
-            <ComboBox x:Name="cbxSelectCategory" Margin="10" Height="25
-                      "/>
-        </StackPanel>
-        <Label Content="Search" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="76" Height="27"/>
-        <Button x:Name="btnSearch" Content="&gt;&gt;&gt;" HorizontalAlignment="Left" Height="26" Margin="312,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="61" Click="btnSearch_Click"/>
-        <TextBox x:Name="tbxSearch" HorizontalAlignment="Left" Height="26" Margin="91,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="178"/>
-        <Button x:Name="btnShowAll" Content="Show All" Grid.Column="1" HorizontalAlignment="Left" Margin="36,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="103" Height="26" Click="BtnShowAll_Click"/>
-        <ComboBox x:Name="cbxFilter" HorizontalAlignment="Left" Margin="91,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="178" Height="27" SelectionChanged="CbxFilter_SelectionChanged"/>
-        <Label Content="Filter" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="47" Height="27"/>
-        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="91,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="100" Height="26" Click="BtnSave_Click"/>
-        <Button x:Name="btnLoad" Content="Load" HorizontalAlignment="Left" Margin="91,10,0,0" Grid.Row="4" VerticalAlignment="Top" Width="100" Height="26" Click="BtnLoad_Click"/>
+        <StackPanel Grid.Row="0" Grid.Column="2" Margin="10"/>
+        <Label Content="Search" HorizontalAlignment="Left" Margin="82,38,0,0" VerticalAlignment="Top" Width="76" Height="27" Grid.Column="1"/>
+        <Button x:Name="btnSearch" Content="&gt;&gt;&gt;" HorizontalAlignment="Left" Height="26" Margin="60,73,0,0" VerticalAlignment="Top" Width="61" Click="btnSearch_Click" Grid.Column="2"/>
+        <TextBox x:Name="tbxSearch" HorizontalAlignment="Left" Height="26" Margin="10,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="178" Grid.Column="2"/>
+        <Button x:Name="btnShowAll" Content="Show All" Grid.Column="2" HorizontalAlignment="Left" Margin="39,122,0,0" VerticalAlignment="Top" Width="103" Height="26" Click="BtnShowAll_Click"/>
+        <ComboBox x:Name="cbxFilter" HorizontalAlignment="Left" Margin="10,170,0,0" VerticalAlignment="Top" Width="178" Height="27" SelectionChanged="CbxFilter_SelectionChanged" Grid.Column="2"/>
+        <Label Content="Filter" HorizontalAlignment="Left" Margin="99,170,0,0" VerticalAlignment="Top" Width="47" Height="27" Grid.Column="1"/>
+        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="46,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100" Height="26" Click="BtnSave_Click" Grid.Column="1"/>
+        <Button x:Name="btnLoad" Content="Load" HorizontalAlignment="Left" Margin="46,11,0,0" Grid.Row="2" VerticalAlignment="Top" Width="100" Height="26" Click="BtnLoad_Click" Grid.Column="1"/>
     </Grid>
 </Window>
